fix: table overflow

--- a/static/styles.css
+++ b/static/styles.css
@@ -27,8 +27,8 @@ img {
    width: 50%;
    height: 85%;
    margin: auto;
-   grid-template-columns: 200px auto;
-   grid-template-rows: 146px repeat(5, 1fr);
+   grid-template-columns: 170px 730px;
+   grid-template-rows: 124px 325px;
    row-gap: 15px;
    column-gap: 15px;
 }
@@ -41,8 +41,9 @@ img {
 .bio {
    display: flex;
    grid-row: 1 / 6;
-   align-items: center;
+   align-items: flex-end;
    padding: 20px;
+   gap: 10px;
 }
 
 .stat-nav-bar {
@@ -52,7 +53,7 @@ img {
 .summary {
    display: grid;
    grid-template-rows: 1fr 10fr;
-   grid-row: 2 / 5 ;
+   grid-row: 2;
 }
 
 ul {
@@ -80,6 +81,7 @@ ul {
    display: flex;
    flex-direction: column;
    grid-row: 2;
+   gap: 20px;
 }
 
 .overflow-x-hidden {
@@ -89,5 +91,9 @@ ul {
 .stat-table {
    width: 100%;
    height: 100%;
-   overflow: auto;
+   overflow-x: scroll;
+}
+
+.name {
+   font-size: 3rem;
 }
